<resources>
    <string name="app_name">DZ-2024-08</string>
    <string name="edit">Edit</string>
    <string name="content_description_edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="more">More</string>
    <string name="content_description_more">More</string>

    <string name="option_1">Option1</string>
    <string name="option_2">Option2</string>
    <string name="option_3">Option3</string>
    <string name="btn_static_menu">Static menu</string>
    <string name="btn_dynamic_menu">Dynamic menu</string>
    <string name="hint_input">Input</string>
    <string name="btn_run_operation">Run operation</string>
    <string name="btn_run_bg_service">Run background service</string>
    <string name="btn_listen">Listen</string>
    <string name="btn_enough">Enough!</string>
</resources>